# WhiteNoiseGenerator

./: CMakeLists.txt  README.md
src/: App.cpp  Controller.cpp  Controller.hpp  Model.cpp  Model.hpp  View.cpp  View.hpp
